@@ -4,7 +4,7 @@ Util::CommandLine - Command-line interface helper utility
 
 # VERSION
 
-version 1.04
+version 1.05
 
 [![Build Status](https://travis-ci.org/gryphonshafer/Util-CommandLine.svg)](https://travis-ci.org/gryphonshafer/Util-CommandLine)
 [![Coverage Status](https://coveralls.io/repos/gryphonshafer/Util-CommandLine/badge.png)](https://coveralls.io/r/gryphonshafer/Util-CommandLine)
@@ -25,6 +25,9 @@ version 1.04
     # example 2
     use Util::CommandLine qw( podhelp singleton );
 
+    # example 3
+    my $opt = options('set|s=s{0,3} extra|e=s');
+
 # DESCRIPTION
 
 This library is command-line interface helper utility. It unifies some useful
@@ -35,7 +38,7 @@ sub-utilities for command-line programs.
 ## options
 
 This function if imported let's you make a simple call to leverage the awesome
-of [Getopt::Long](https://metacpan.org/pod/Getopt::Long) and [Pod::Usage](https://metacpan.org/pod/Pod::Usage).
+of [Getopt::Long](https://metacpan.org/pod/Getopt%3A%3ALong) and [Pod::Usage](https://metacpan.org/pod/Pod%3A%3AUsage).
 
     my $settings = options( qw( text=s alttext=s flag1 flag2 ) );
     print $settings->{'text'} if ( $settings->{'flag1'} );
@@ -55,7 +58,7 @@ it won't process any options.
 
 ## pod2usage
 
-This is pure export from [Pod::Usage](https://metacpan.org/pod/Pod::Usage).
+This is pure export from [Pod::Usage](https://metacpan.org/pod/Pod%3A%3AUsage).
 
     pod2usage( '-exitstatus' => 1, '-verbose' => 1 ) if ( $settings->{'help'} );
 
@@ -65,27 +68,25 @@ For some command-line programs (typically longer-running cron-triggered
 programs), it's a good idea to ensure only a single instance of the program
 runs at any given time. Use the "singleton" flag.
 
-On startup, this will use [Proc::PID::File](https://metacpan.org/pod/Proc::PID::File) to check for any other instances of
+On startup, this will use [Proc::PID::File](https://metacpan.org/pod/Proc%3A%3APID%3A%3AFile) to check for any other instances of
 the program running. If they are running, the program will die with an
 appropriate error.
 
 ## readmode
 
-This is the same function as [Term::ReadKey](https://metacpan.org/pod/Term::ReadKey)'s `ReadMode`.
+This is the same function as [Term::ReadKey](https://metacpan.org/pod/Term%3A%3AReadKey)'s `ReadMode`.
 
 # DEPENDENCIES
 
 This module has the following dependencies:
-[Getopt::Long](https://metacpan.org/pod/Getopt::Long), [Pod::Usage](https://metacpan.org/pod/Pod::Usage), [Proc::PID::File](https://metacpan.org/pod/Proc::PID::File), [Term::ReadKey](https://metacpan.org/pod/Term::ReadKey).
+[Getopt::Long](https://metacpan.org/pod/Getopt%3A%3ALong), [Pod::Usage](https://metacpan.org/pod/Pod%3A%3AUsage), [Proc::PID::File](https://metacpan.org/pod/Proc%3A%3APID%3A%3AFile), [Term::ReadKey](https://metacpan.org/pod/Term%3A%3AReadKey).
 
 # SEE ALSO
 
 You can look for additional information at:
 
 - [GitHub](https://github.com/gryphonshafer/Util-CommandLine)
-- [CPAN](http://search.cpan.org/dist/Util-CommandLine)
 - [MetaCPAN](https://metacpan.org/pod/Util::CommandLine)
-- [AnnoCPAN](http://annocpan.org/dist/Util-CommandLine)
 - [Travis CI](https://travis-ci.org/gryphonshafer/Util-CommandLine)
 - [Coveralls](https://coveralls.io/r/gryphonshafer/Util-CommandLine)
 - [CPANTS](http://cpants.cpanauthors.org/dist/Util-CommandLine)
@@ -97,7 +98,7 @@ Gryphon Shafer <gryphon@cpan.org>
 
 # COPYRIGHT AND LICENSE
 
-This software is copyright (c) 2019 by Gryphon Shafer.
+This software is copyright (c) 2020 by Gryphon Shafer.
 
 This is free software; you can redistribute it and/or modify it under
 the same terms as the Perl 5 programming language system itself.
