@@ -1,6 +1,8 @@
 Revision history for Util::CommandLine
 
 {{$NEXT}}
+        - Provide support for "example|e=s{1,3}" syntax
+        - Allow option() input to be in single string format
 
 1.04      2019-08-08 09:15:33-07:00 America/Los_Angeles
         - Add Term::ReadKey's ReadMode; setup singelton as a function
